samples/_failures_safe/1761150195_4f5f89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f9f701d.c: In function ‘main’:
./samples/SAFE/__tmp_2f9f701d.c:109:37: error: expected ‘;’ at end of input
  109 |     for (size_t i = 0; i < input_len
      |                                     ^
      |                                     ;
./samples/SAFE/__tmp_2f9f701d.c:109:5: error: expected declaration or statement at end of input
  109 |     for (size_t i = 0; i < input_len
      |     ^~~
